--- a/templates/base.html
+++ b/templates/base.html
@@ -98,6 +98,9 @@
                                 <li><a class="dropdown-item" href="{{ url_for('main.dashboard') }}">
                                     <i class="fas fa-tachometer-alt me-2"></i>Dashboard
                                 </a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.activity_feed') }}">
+                                    <i class="fas fa-rss me-2"></i>Activity Feed
+                                </a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('auth.profile') }}">
                                     <i class="fas fa-user me-2"></i>Profile
                                 </a></li>
