--- a/templates/auth/followers.html
+++ b/templates/auth/followers.html
@@ -45,17 +45,15 @@
                                 {% if current_user.is_authenticated and current_user.id != follow.follower.id %}
                                 <div>
                                     {% if current_user.is_following(follow.follower) %}
-                                    <form action="{{ url_for('auth.unfollow_user', user_id=follow.follower.id) }}" method="post" class="d-inline">
-                                        <button type="submit" class="btn btn-sm btn-outline-secondary">
-                                            <i class="fas fa-user-minus me-1"></i>Unfollow
-                                        </button>
-                                    </form>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary js-follow-toggle"
+                                            data-user-id="{{ follow.follower.id }}" data-following="1">
+                                        <i class="fas fa-user-minus me-1"></i>Unfollow
+                                    </button>
                                     {% else %}
-                                    <form action="{{ url_for('auth.follow_user', user_id=follow.follower.id) }}" method="post" class="d-inline">
-                                        <button type="submit" class="btn btn-sm btn-primary">
-                                            <i class="fas fa-user-plus me-1"></i>Follow
-                                        </button>
-                                    </form>
+                                    <button type="button" class="btn btn-sm btn-primary js-follow-toggle"
+                                            data-user-id="{{ follow.follower.id }}" data-following="0">
+                                        <i class="fas fa-user-plus me-1"></i>Follow
+                                    </button>
                                     {% endif %}
                                 </div>
                                 {% endif %}
